--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>This is the Header</title>
 </head>
 <body>
-	<h1>This is a Folder</h1>
 
 </body>
 </html>
